--- a/CasPratiques/03-restaurant/integration/css/style.css
+++ b/CasPratiques/03-restaurant/integration/css/style.css
@@ -1,62 +1,69 @@
-/* ---- header ---- */
 @import url('https://fonts.googleapis.com/css?family=Caveat+Brush');
-/* 1. Mettre Nav en position absolute
+
+/* ---- header ---- */
+  /* 1. Mettre Nav en position absolute
    2. Ajouter la propriété bottom:50px; sur nav
    3. Ajouter les propriété position:relative sur header;
    4. enlever position relative header et ajouter sur body
 */
-.inlineB{
-  display: inline-block;
-}
+
+/*----- Balises -----*/
 header{
   position: relative;
   background-image: url('../img/woddPlank.jpg');
 }
+
 nav{
+  top:40px;
   position: absolute;
   right: 25px;
-}
-#logo{
-  width: 200px;
-  margin:auto;
-  position: relative;
-  margin-top: 250px;
-  padding-bottom: 250px;
-}
-#logo div{
-	width: 0;
-	height: 0;
-	border-top: 150px solid #E53F6F;
-	border-left: 150px solid transparent;
-}
-#logo img{
-  top: -27px;
-  position: absolute;
-  width: 100%;
-}
-h1{
-  font-family: 'Caveat Brush', cursive;
-  text-transform: uppercase;
-  font-size: 50px;
-}
-h1 span{
-  font-size: 40px;
-  display: inline;
-  vertical-align: top;
-  position: relative;
-}
-h1 span:after{
-  top: 15px;
-  content: "-";
-  position: absolute;
-  left: 0;
-}
-#logoResto{
+  }
+  nav a{
+    margin:30px;
+    font-size:30px;
+    color:black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Caveat Brush', cursive;
+  }
+  nav li{
+
+  }
+
+.logoResto{
   position: relative;
   display: inline-block;
   margin-left: 80px;
 }
-.rectangle{
+
+h1{
+  font-family: 'Caveat Brush', cursive;
+  text-transform: uppercase;
+  font-size: 50px;
+  }
+  h1 span{
+    font-size: 40px;
+    display: inline;
+    vertical-align: top;
+    position: relative;
+  }
+  h1 span:after{
+    top: 15px;
+    content: "-";
+    position: absolute;
+    left: 0;
+  }
+h2{
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: sans-serif;
+}
+#story h2{
+  font-size: 55px;
+}
+
+  /*Class pour les traits Roses*/
+.rectRose{
   bottom: 12px;
   position: absolute;
   margin: 0;
@@ -66,6 +73,36 @@ h1 span:after{
   width: 0px;
   left: 26%;
 }
+section .rectRose{
+  position: inherit;
+  margin: auto;
+  left: 0;
+  bottom:15px;
+}
+/*----- Id -----*/
+#logo{
+  width: 300px;
+  margin:auto;
+  position: relative;
+  margin-top: 250px;
+  padding-bottom: 250px;
+  }
+  #logo div{
+  	width: 0;
+  	height: 0;
+  	border-top: 250px solid #E53F6F;
+  	border-left: 250px solid transparent;
+  }
+  #logo img{
+    top: -27px;
+    position: absolute;
+    width: 100%;
+  }
+
+.inlineB{
+  display: inline-block;
+}
+
 /* ---------- */
 
 section img{
@@ -87,6 +124,8 @@ section p, section h2{
 }
 .pBloque-left{
   width: 40%;
+  overflow: visible;
+  position: relative;
 }
 .pBloque-right{
   width: 60%;
@@ -116,6 +155,47 @@ section p, section h2{
   background-image: url('../img/asperge.jpg');
   background-size: cover;
 }
+#local{
+  height: 755px;
+}
+.txtRose{
+  color: #E53F6F;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: sans-serif;
+}
+header .fa{
+  color:red;
+  background-color:white;
+  margin:10px;
+  padding:0 6px;
+  border-radius:10px;
+  transition: 1s;
+}
+header .fa:hover{
+  color:blue;
+  background-color:darkmagenta;
+  animation-name: clignote;
+  animation-duration: 0.6s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes clignote {
+  0%{
+    color:blue;
+    background-color:darkmagenta;
+  }
+
+  50%{
+    color:purple;
+    background-color:#2196F3;
+  }
+  100%{
+    color:blue;
+    background-color:darkmagenta;
+  }
+}
+
 /*p{
   position: relative;
 }
@@ -127,3 +207,39 @@ p:before{
   /*height: 15px;
   width: 15px;
 }*/
+.pBloque-left > img{
+  width: 50%;
+}
+#local .pBloque-left img{
+  position: relative;
+  top: 70px;
+  z-index: -1;
+}
+#eggs{
+  width: 100%;
+}
+/* footer */
+footer{
+  padding: 150px 0;
+  background-image: url('../img/pattern.jpg');
+}
+footer>div{
+  display: inline-block;
+  width: 50%;
+}
+footer p{
+  font-family: sans-serif;
+  text-transform: uppercase;
+  padding-left: 78px;
+  font-size: 0.9em;
+}
+#social ul{
+  float: right;
+  margin-right: 50px;
+}
+#social li{
+  display: inline-block;
+  text-align: right;
+  margin:0 5px;
+  color: #E53F6F;
+}
